--- a/KarlieKnoepfler/Creative.html
+++ b/KarlieKnoepfler/Creative.html
@@ -44,7 +44,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="KarlieKnoepfler.html">About Me</a>
+                            <a href="index.html">About Me</a>
                         </li>
                         <li>
                             <a href="Creative.html">Creative</a>
