--- a/KarlieKnoepfler/index.html
+++ b/KarlieKnoepfler/index.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name= "viewport" content="width=device-width">
-        <title>Revisions</title>
+        <title>Karlie Knoepfler</title>
         <style>
             #mainheader {
                 background-color: #663da8;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-size:40px;
                 font-size:40px;
                 color: #e0dfe0;
             }
@@ -56,17 +55,21 @@
                 </nav>
             </aside>
             <main id="main">
-                <h2>Revisions to This Site</h2>
-                <img id="prerevision" src="Revision.png" width = "400" alt="Pre-revision screenshot">
-                <figcaption>A screenshot of this website before feedback.</figcaption>
-                <p style="font-size: large;">
-                    I received some feedback from Janice Knoepfler, a fellow Ford Credit employee who is also my mom.
-                    She thought the original page needed some more background information about me and possibly another photo.
-                    I followed her advise and added additional text and images to the About Me page, which did make it more visually interesting.
-
+                <h2>About Me</h2>            
+                <p>
+                Hey from a bookworm and lifelong lover of learning! I completed a degree in Biological Systems Engineering at the University of 
+                Nebraska-Lincoln and while I studied there I completed a research project at Leibniz Univeritat Hannover in Germany.
+                This ignited my passion for traveling and contstantly learning new things so I also spent a semester studying at Korea University in Seoul, South Korea. 
+                I've worked with Ford Credit since March of 2020.  
                 </p>
-                <img id="postrevision" src="postrevision.png" width = "400" alt="Post-revision screenshot">
-                <figcaption>A screenshot of the website after making the appropriate revisions.</figcaption>        
+                <img id="profile-picture" src="photo.jpg" width = "300" alt="Karlie Knoepfler">
+                <img id="south-korea" src="korea1.jpg" width = "300" alt= "Karlie in front of Gyeongbokgung Palace">
+                <p>I want to become a software engineer because I love learning and problem solving. In school I had a very small taste of coding education.
+                I found it very excting and interesting at the time but I was not allowed the time to look into it more.  
+                In this opportunity I am hoping to expand my knowledge and learn a valuable skill set that engages with my existing training in problem solving.
+                </p>
+                <img id="books" src="books.jpg" width = "300" alt="Karlie with books"> 
+
             </main>
         </div>
     </body>
